tests/ui/parser/issues/issue-24375.stderr
error: expected a pattern, found an expression
  --> $DIR/issue-24375.rs:6:9
   |
LL |         tmp[0] => {}
   |         ^^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider moving the expression to a match arm guard
   |
LL -         tmp[0] => {}
LL +         val if val == tmp[0] => {}
   |
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = tmp[0];
LL ~     match z {
LL ~         VAL => {}
   |

error: aborting due to 1 previous error

